XmlJson/src/XmlParser.java
/* XmlParser.java */
/* Generated By:JavaCC: Do not edit this line. XmlParser.java */
//package parseurjava;  // Ajout de la déclaration du package
import java.util.ArrayList;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;
public class XmlParser implements XmlParserConstants {
 

// --- Analyse syntaxique ---
// Début de l'analyse
	public static Map<String, Object> xmlToJson(Node node) {
	    Map<String, Object> json = new LinkedHashMap<>();
	    if (!node.getAttributes().isEmpty()) {
	        for (Map.Entry<String, String> entry : node.getAttributes().entrySet()) {
	            json.put("@" + entry.getKey(), entry.getValue());
	        }
	    }
	    if (node.getContent() != null) {
	        json.put("#text", node.getContent());
	    }
	    for (Node child : node.getChildren()) {
	        json.put(child.getName(), xmlToJson(child));
	    }
	    return json;
	}

  final public Node document() throws ParseException {
    return element();
}

// Éléments XML
  final public Node element() throws ParseException {
	    Token tagNameToken;
	    Token endTagToken;
	    Node node;

	    jj_consume_token(OPEN_TAG);
	    tagNameToken = tag(); // Récupère le nom de la balise
	    node = new Node(tagNameToken.image); // Crée un nouveau Node avec ce nom

	    // Récupère les attributs
	    while (jj_ntk == NAME) {
	        attribute(node);
	    }

	    jj_consume_token(CLOSE_TAG);

	    // Récupère le contenu (texte ou enfants)
	    content(node);

	    // Vérifie la balise fermante
	    if (jj_ntk == OPEN_TAG) {
	        jj_consume_token(OPEN_TAG);
	        jj_consume_token(SLASH);
	        endTagToken = tag();
	        jj_consume_token(CLOSE_TAG);

	        if (!endTagToken.image.equals(tagNameToken.image)) {
	            throw new ParseException("Balise fermante invalide : </" + endTagToken.image + "> attendu </" + tagNameToken.image + ">");
	        }
	    }

	    return node; // Retourne l'objet Node
	}


// Balises
/*
String tag() : {
    String name;
}
{
    <NAME> { name = token.image; }
    { return name; }
}*/
  final public Token tag() throws ParseException {
	    Token token = jj_consume_token(NAME);
	    return token;
	}


// Attributs
  final public void attribute(Node node) throws ParseException {
	    Token attrNameToken;
	    String attrValue;

	    attrNameToken = tag();
	    jj_consume_token(EQUAL);
	    attrValue = quotedValue();

	    // Ajoute l'attribut au Node
	    node.addAttribute(attrNameToken.image, attrValue);
	}


// Valeur entre guillemets
  final public String quotedValue() throws ParseException {String value;
    jj_consume_token(QUOTE);
    value = text();
    jj_consume_token(QUOTE);
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
}

// Contenu de l'élément
  final public void content(Node node) throws ParseException {
	    while (jj_ntk == OPEN_TAG || jj_ntk == TEXT) {
	        switch (jj_ntk) {
	            case OPEN_TAG: {
	                // Analyse un élément enfant et l'ajoute au Node
	                Node childNode = element();
	                node.addChild(childNode);
	                break;
	            }
	            case TEXT: {
	                // Récupère le texte et l'ajoute comme contenu
	                String textContent = text();
	                node.setContent(textContent);
	                break;
	            }
	            default:
	                throw new ParseException();
	        }
	    }
	}


// Texte entre les balises
  final public String text() throws ParseException {String value;
    jj_consume_token(TEXT);
value = token.image;
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public XmlParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x100,0x4,0x84,0x84,};
	}

  /** Constructor with InputStream. */
  public XmlParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public XmlParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new XmlParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public XmlParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new XmlParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new XmlParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public XmlParser(XmlParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(XmlParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[9];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 4; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 9; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
